Modification de quelques détails dans le récapitulatif

--- a/Recapitulatif/Recapitulatif.tex
+++ b/Recapitulatif/Recapitulatif.tex
@@ -32,6 +32,7 @@ numberstyle=\color{blue}}
 \begin{document}
 \maketitle
 
+\vspace{2cm}
 \tableofcontents
 
 \newpage
@@ -312,8 +313,11 @@ Une autre solution serait peut-être d'augmenter considérable la variable $wind
 \url{https://eprint.iacr.org/2010/523.pdf}\\
 \url{https://link.springer.com/content/pdf/10.1007\%2F978-3-642-15031-9_28.pdf}\\
 
-\item Attaques sur des implémentations en boîte blanche :\\
+\item Attaques sur l'implémentation \textit{adoring poitras} :\\
 \url{https://eprint.iacr.org/2018/098.pdf}\\
+
+\item Mon dépôt GitHub regroupant les attaques (ou tentatives d'attaques) décrites dans ce récapitulatif :\\
+\url{https://github.com/jeandestribois/Stage_2020}\\
 \end{itemize}
 
 
